--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <plugin
     id="cordova-plugin-keychainsharing"
-    version="0.3.0"
+    version="1.0.0"
     xmlns="http://apache.org/cordova/ns/plugins/1.0">
 
   <name>Keychain Sharing</name>
@@ -25,7 +25,7 @@
     <clobbers target="KeychainSharing"/>
   </js-module>
 
-  <preference name="SHARED_BUNDLE_ID" />
+  <preference name="KEYCHAIN_ACCESS_GROUP" />
 
   <platform name="ios">
     <config-file parent="/*" target="config.xml">
@@ -35,7 +35,7 @@
     </config-file>
 
     <config-file target="*-Info.plist" parent="KeychainSharingBundleID">
-      <string>$SHARED_BUNDLE_ID</string>
+      <string>$KEYCHAIN_ACCESS_GROUP</string>
     </config-file>
 
     <header-file src="src/ios/lib/UICKeyChainStore.h"/>
